k8/k8s Rosurces/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummyservice
  namespace: dummynamespace
spec:
#  type: NodePort
  ports:
    - port: 80
#      nodePort: 31000
  selector:
    group1: dummylabel
