k8/k8s Rosurces/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: example-ingress
  namespace: dummynamespace
  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:

  rules:

    - host: hello-world.info

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: dummyservice

                port:

                  number: 80
